Adding data citation

--- a/ComplexNetworks/main.ipynb
+++ b/ComplexNetworks/main.ipynb
@@ -25,6 +25,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "Data from:\n",
+    "title={The Network Data Repository with Interactive Graph Analytics and Visualization},\n",
+    "author={Ryan A. Rossi and Nesreen K. Ahmed},\n",
+    "booktitle={AAAI},\n",
+    "url={https://networkrepository.com},\n",
+    "year={2015}\n",
+    "\"\"\"\n",
+    "\n",
     "file = 'data/bn-fly-drosophila_medulla_1.edges'\n",
     "G = nx.read_edgelist(file)"
    ]
